# dtee_ncnn_face_recognition

./: Makefile  README.md
scripts/: build_in_docker.sh  setup.sh  start_client.sh  start_server.sh
src/: CMakeLists.txt  distributed_face_recognition.edl  z_enclave_env_provider.cpp
src/enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.lds  meta.S
src/enclave/insecure/: file.cpp
src/enclave/secure/: ecdh.cpp  ecdh.h  embedding.cpp
src/host/.cache/clangd/index/: CLI11.hpp.7AC779D159A0C932.idx  MobileFaceNet.inc.07606934370929E7.idx  allocation.h.C2EF699BD3744C1E.idx  allocator.h.0C4914CC10A711E2.idx  allocator.h.1C26E018F852F0EE.idx  allocator.h.701D6DC66D50AF38.idx  allocator.h.B45B8A6926103680.idx  base.h.6E84937FC918609F.idx  blob.h.65F869551A0DFDAA.idx  blob.h.71798B18AB2F2775.idx  blob.h.B18EC53DFCAFBDA7.idx  blob.h.C25CB8AF0C7CEDF4.idx  builtin_op_data.h.A0A3B82EBFC62780.idx  builtin_op_data.h.F752F0A6DF53E44B.idx  c_api_types.h.56E083C1FC212B80.idx  catch.hpp.E22541AE7F43C303.idx  client.cpp.0F5CDF3F39DDACF8.idx  common.h.CFCB5501AE9059B7.idx  compute_node.cpp.ED443C65B1A5EFA5.idx  datareader.h.599AC226C67BB529.idx  datareader.h.79360847972EBA52.idx  datareader.h.E90B997EF70BCE05.idx  datareader.h.F96B2FDAFFF66440.idx  embedding.cpp.CA251026E84EFEA5.idx  embedding.h.1C3109709079F34D.idx  error_reporter.h.91F575E532EC18FF.idx  external_cpu_backend_context.h.EC389585EF22E226.idx  file.cpp.A29B6391D136E4B2.idx  file.h.7BEA3F7BCF9266B7.idx  flatbuffers.h.EA953CAEC400D028.idx  img_receiver.cpp.676FF88477CE6656.idx  img_receiver.h.820D5F8F258AEF85.idx  interpreter.h.5CDBE01B65BD0608.idx  interpreter_builder.h.3971C9520A8A2A65.idx  layer.h.306275331D86841A.idx  layer.h.8A50A9CB101B04CF.idx  (+67 more)
src/host/.dev/TEE-Capability/: ClientServerTypes.h  DDSClient.h  DDSServer.h  Serialization.h  Softbus.h  Util.h  common.h  distributed_tee.h  dtee_sdk.h
src/host/build_rv/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/host/build_rv/insecure/: Makefile  cmake_install.cmake
src/host/build_rv/secure/: Makefile  cmake_install.cmake
src/host/insecure/: CMakeLists.txt  file.cpp  file.h  function.cmake  server.cpp
src/host/secure/: CMakeLists.txt  embedding.cpp  function.cmake
(+12 files in other folders)
